--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,6 @@
  * in the user manual at https://docs.gradle.org/6.5.1/userguide/multi_project_builds.html
  */
 
-rootProject.name = 'OpenAiChatGpt'
+//rootProject.name = 'OpenAiChatGpt'
+rootProject.name = 'OpenAiApi'
+include('OpenAiLibrary')
