--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,20 @@
 plugins {
-    // Apply the Kotlin JVM plugin to add support for Kotlin.
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
-
-    // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
-    id 'maven-publish'
-//    id 'signing'
+    id "org.jetbrains.dokka" version "1.7.20"
+    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id "io.github.gradle-nexus.publish-plugin" version "1.1.0"
 }
 
-version = '0.1.0-alpha'
-group = 'com.sauravsharan'
+ext {
+    PUBLISH_GROUP_ID = 'com.sauravsharan'
+    PUBLISH_VERSION = '0.1.0-alpha'
+    PUBLISH_ARTIFACT_ID = 'openAiApi'
+}
+
+apply from: "${rootProject.projectDir}/scripts/publish-module.gradle"
 
 repositories {
     jcenter()
-}
-
-//signing {
-//    useGpgCmd()
-//    sign configurations.archives
-//}
-
-//publishing {
-//    publications {
-//    }
-//
-//    repositories {
-//        maven {
-//            name = "openAiAPi" //  optional target repository name
-//            url = "http://my.org.server/repo/url"
-////            credentials {
-////                username = 'sauravsharan'
-////                password = 'my-password'
-////            }
-//        }
-//    }
-//}
-
-java {
-    withSourcesJar()
 }
 
 dependencies {
@@ -56,29 +33,10 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:4.2.1"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.10.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
 }
 
-//task javadocJar(type: Jar) {
-//    classifier = 'javadoc'
-//    from javadoc
-//}
-//
-//task sourcesJar(type: Jar) {
-//    classifier = 'sources'
-//    from sourceSets.main.allSource
-//}
-
-//artifacts {
-//    archives javadocJar, sourcesJar
-//}
-
-tasks.named('jar') {
-    manifest {
-        attributes('Implementation-Title': rootProject.name,
-                'Implementation-Version': project.version)
-    }
-}
+apply from: "${rootDir}/scripts/publish-root.gradle"
