--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,7 +3,7 @@ name: Publish
 on:
   release:
     # We'll run this workflow when a new GitHub release is created
-    types: [released]
+    types: [prereleased, released]
 
 jobs:
   publish:
