--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'signing'
+    id 'maven-publish'
     id 'java-library'
     id "org.jetbrains.dokka" version "1.7.20"
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
@@ -33,7 +35,7 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:4.2.1"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-jackson:2.10.1'
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.0"
