--- a/scripts/publish-module.gradle
+++ b/scripts/publish-module.gradle
@@ -1,6 +1,3 @@
-apply plugin: 'maven-publish'
-apply plugin: 'signing'
-
 task sourcesJar(type: Jar) {
     archiveClassifier.set('sources')
     from sourceSets.main.java.srcDirs
@@ -69,10 +66,15 @@ afterEvaluate {
 }
 
 signing {
-    useInMemoryPgpKeys(
-            rootProject.ext["signing.keyId"],
-            rootProject.ext["signing.key"],
-            rootProject.ext["signing.password"],
-    )
-    sign publishing.publications
+    File secretPropsFile = project.rootProject.file('local.properties')
+    if (secretPropsFile.exists()) {
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file('local.properties').newDataInputStream())
+        useInMemoryPgpKeys(
+                properties.getProperty("signing.keyId"),
+                properties.getProperty("signing.key"),
+                properties.getProperty("signing.password"),
+        )
+        sign publishing.publications
+    }
 }
