--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           distribution: adopt
           java-version: 11
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
 
         # Builds the release artifacts of the library
       - name: Release build
