--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,7 @@ jobs:
           distribution: adopt
           java-version: 11
       - name: Change wrapper permissions
-        run: chmod +x ./gradlew
+        run: chmod +x gradlew
 
         # Builds the release artifacts of the library
       - name: Release build
