--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,10 @@ jobs:
           distribution: adopt
           java-version: 11
 
+        # wrapper permission
+      - name: Change wrapper permissions
+        run: chmod +x ./gradlew
+
         # Builds the release artifacts of the library
       - name: Release build
         run: ./gradlew :openAi:assembleRelease
