--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,8 +17,8 @@ jobs:
         with:
           distribution: adopt
           java-version: 11
-      - name: Change wrapper permissions
-        run: chmod +x gradlew
+     # - name: Change wrapper permissions
+     #  run: chmod +x gradlew
 
         # wrapper permission
       - name: Change wrapper permissions
